# aes256-encryption-tool

./: .flake8  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: check.yml  workflow.yml
src/: __init__.py  encryptor.py
tests/: test_encryptor.py
