[tool.poetry]
name = "aes256-encryption-tool"
version = "0.1.0"
description = "Tool for encrypt/decrypt"
authors = ["duxevy <79513394+duxevy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
