[tool.poetry]
name = "aes256-encryption-tool"
version = "0.1.0"
description = "Tool for encrypt/decrypt"
authors = ["duxevy <79513394+duxevy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycryptodome = "^3.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.mypy]
files = "src"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
